<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tanam Grocery App</string>
    <string name="screen_next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Please Correct Email</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">"The password is invalid it must 8 characters at least"</string>
    <string name="passwor_pattern">Password is too weak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signup_checkbox">By tapping “Sign Up” you accept our<br /> <b><a href='www.google.com'> terms </a></b> and <b> <a href=''>condition</a></b></string>
    <string name="App_name">tanam</string>
    <string name="search_bar_hint">Search beverages or foods</string>
    <string name="title_activity_categories_list">CategoriesListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cart">Add to cart</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="originalPrice"><strike>$8.9</strike></string>
    <string name="recent_search">Recent Search</string>
    <string name="clear_all">Clear All</string>
    <string name="search_results">Search Results</string>
    <string name="newest">Newest</string>
    <string name="_5_9">$5.9</string>
    <string name="fruit">Fruit</string>
    <string name="fragment_home_categories">Categories</string>
    <string name="search_filters">Search Filters</string>
    <string name="reset">Reset</string>
    <string name="price_range">Price Range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="others">Others</string>
    <string name="_4_stars">4 Stars</string>
    <string name="fresh_fruits">Fresh Fruits</string>
    <string name="_45_items">45 Items</string>
    <string name="categories_search">Categories</string>
    <string name="apply_filter">Apply filter</string>
    <string name="star_ratings">Star Ratings</string>
    <string name="items">Items</string>
    <string name="_2_promos">2 Promos</string>
    <string name="checkout">CHECKOUT</string>
    <string name="apply_promotion_code">Apply Promotion Code</string>
    <string name="tax_2">TAX (2%)</string>
    <string name="more">more1</string>
    <string name="sign_up">CREATE AN ACCOUNT</string>
    <string name="signin_text">Don’t have an account?</string>
    <string name="username_hint">Username/Email</string>
    <string name="signin_label">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="signin_welcome_back">Welcome back</string>
    <string name="subtitel">Grocery App</string>
    <string name="signup_titel">Grocery App</string>
    <string name="signUp_create_your_account">Create your account</string>
    <string name="signup_lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_email">Email</string>
    <string name="signup_register">REGISTER</string>
    <string name="signup_label">Already have account?</string>
    <string name="sreen_desc">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit, sed do eiusmod tempor\n incididunt ut labore</string>
    <string name="fragment_home_popular_deals">Popular Deals</string>
    <string name="fragment_home_cat_name" />
    <string name="fragment_home_items">Items</string>
    <string name="pfruits">Fruits</string>
    <string name="ip_fresh_tomatoes">Fresh Tomatoes</string>
    <string name="ip_5_0">$ 5.0</string>
    <string name="dollar">$</string>
    <string name="categoriesTitle">FRUITS</string>
    <string name="pditemname">Organic Lemons</string>
    <string name="pd">Lorem ipsum dolor sit amet, consectetur adipiscing \nelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_8_0"><strike>$8.0</strike></string>
    <string name="tv_emailaddress">Email Address</string>
    <string name="et_name">Enter your Name</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="enter_here">Enter here</string>
    <string name="country">Country</string>
    <string name="enter_your_holder_name">Enter your Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="enter_your_card_number">Enter your Card Number</string>
    <string name="month_year">Month/Year</string>
    <string name="cvv">CVV</string>
    <string name="save_this_card">Save this card</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="cash_on_ndelivery">Cash On\nDelivery</string>
    <string name="todo">TODO</string>
    <string name="credit_ncard">Credit \nCard</string>
    <string name="paipal_nmethod">Paipal \nMethod</string>
    <string name="a_bank">A Bank</string>
    <string name="card_no">**** **** **** ****</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="cardholder_name">Louis Anderson</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="months_year">09/11</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="holder_name">Holder Name</string>
    <string name="no_results_found">No Results Found</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="full_name">Full Name</string>

    <string-array name="steps">
            <item>Details</item>
            <item>Address</item>
            <item>Payment</item>
        </string-array>
    <string-array name="search">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string-array name="countryName">
        <item>Choose your country</item>
        <item>China</item>
        <item>India</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>Pakistan</item>
        <item>Brazil</item>
        <item>Nigeria</item>
        <item>Bangladesh</item>
        <item>Russia</item>
        <item>Mexico</item>
        <item>Japan</item>
    </string-array>
</resources>