<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnusedAttribute" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/edittext_shipping"
        android:ems="15"
        android:focusable="auto"
        android:fontFamily="@font/lato"
        android:hint="@string/et_name"
        android:inputType="text"
        android:lineHeight="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:textColor="@color/dark"
        android:textColorHint="@color/soft"
        android:textFontWeight="400"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:ignore="Autofill,KeyboardInaccessibleWidget,MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_21sdp"
        android:text="@string/tv_emailaddress"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UnusedAttribute" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/edittext_shipping"
        android:focusable="auto"
        android:fontFamily="@font/lato"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:lineHeight="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:textColor="@color/dark"
        android:textColorHint="@color/soft"
        android:textFontWeight="400"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        tools:ignore="Autofill,KeyboardInaccessibleWidget,MissingConstraints,RtlSymmetry,UnusedAttribute" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_21sdp"
        android:text="@string/phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UnusedAttribute" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/edittext_shipping"
        android:ems="12"
        android:focusable="auto"
        android:fontFamily="@font/lato"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:lineHeight="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:textColor="@color/dark"
        android:textColorHint="@color/soft"
        android:textFontWeight="400"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        tools:ignore="Autofill,KeyboardInaccessibleWidget,MissingConstraints,RtlSymmetry,UnusedAttribute" />

  <!--  <Button
        android:id="@+id/fdNextBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/fill_button_selector"
        android:elevation="50dp"
        android:text="@string/screen_next"
        android:textColor="@drawable/fill_button_text_selector"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>