<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:context=".Activity.SignInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_96sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginEnd="@dimen/_96sdp"
        android:width="@dimen/_600sdp"
        android:textFontWeight="900"
        android:height="40dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:text="@string/App_name"
        android:textColor=" #FFFFFF"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded,UnusedAttribute" />

    <TextView
        android:id="@+id/subTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginEnd="@dimen/_110sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/signup_titel"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:lineHeight="20dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_79sdp"
        android:background="@drawable/custom_backgroud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvTitel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:width="@dimen/_400sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/signUp_create_your_account"
            android:textColor="#293041"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvSubtitel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/_30sdp" />

        <TextView
            android:id="@+id/tvSubtitel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_17sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_21sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:fontFamily="@font/lato"
            android:text="@string/signup_lorem_ipsum_dolor_sit_amet"
            android:textColor="#7D8FAB"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/etUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="22sp" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:background="@drawable/custom_backgroud_edittext"
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/_9sdp"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="Username"
            android:inputType="text"
            android:paddingStart="@dimen/_13sdp"
            android:textColor=" #293041"
            android:textColorHint="#617D8FAB"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/etEmailUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,HardcodedText,RtlSymmetry" />

        <EditText
            android:id="@+id/etEmailUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:background="@drawable/custom_backgroud_edittext"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/_9sdp"
            android:ems="50"
            android:fontFamily="@font/lato"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_13sdp"
            android:textColor=" #293041"
            android:textColorHint="#617D8FAB"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill,RtlSymmetry" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:background="@drawable/custom_backgroud_edittext"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/_9sdp"
            android:ems="15"
            android:hint="@string/signup_password_hint"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor=" #293041"
            android:textColorHint="#617D8FAB"
            android:textSize="@dimen/_15sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/registerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/ivEye"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="@+id/etPassword"
            app:srcCompat="@drawable/ic_visibility_off_eye"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/fill_button_selector"
            android:elevation="50dp"
            android:text="@string/signup_register"
            android:textColor="@drawable/fill_button_text_selector"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnknownId" />

        <!-- <View
            android:id="@+id/shadow"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_vector_shedow"
            android:foregroundGravity="center_horizontal"
            app:backgroundTint="@drawable/ic_vector_shedow"
            app:elevation="30dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toTopOf="@+id/btn_register" />
-->

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:checked="true"
            android:fontFamily="@font/lato"
            android:gravity="fill"
            android:paddingStart="@dimen/_6sdp"
            android:text="@string/signup_checkbox"
            android:textColor="#7D8FAB "
            android:textFontWeight="400"
            android:textIsSelectable="false"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry,UnusedAttribute" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_84sdp"
            android:layout_marginEnd="@dimen/_83sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/signup_label"
            android:textColor="#7D8FAB"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/signinBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signinBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="SIGN IN"
            android:textColor="@drawable/button_text_selector"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>